--- a/P1.css
+++ b/P1.css
@@ -3,6 +3,8 @@ body {
     font-family: "Sour Gummy", serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    /* overflow-y: free; */
 }
 
 nav {
@@ -89,9 +91,6 @@ button a {
 }
 
 .body {
-    /* background-color: rgb(213, 186, 150); */
-    /* background-color: #84a98c; */
-    /* background-color: #00b4d8; */
     background-color: #90e0ef;
     /* background-color: #52796F; */
     display: flex;
@@ -120,15 +119,20 @@ button a {
     padding: 5px 10px;
     font-size: 16px;
 }
-topup{
+.topup{
     display: flex;
-    justify-content: space-evenly
+    justify-content: space-around
+     /* flex-wrap:wrap; */
 }
 .top1
 {
 font-size: 30px;
 padding: 30px;
 /* margin-left: 50px; */
+}
+.top2{
+    /* padding: 30px; */
+    margin-top: 30px;
 }
 
 .popular {
@@ -234,7 +238,7 @@ padding: 30px;
     }
 
     .form input {
-        width: 100%;
+        /* width: 100%; */
     }
 }
 .question
@@ -243,6 +247,7 @@ display: flex;
 justify-content: space-around;
 padding: 20px;
 margin-top: 20px;
+flex-wrap: wrap;
 }
 .question2
 {
@@ -285,6 +290,7 @@ align-items: center;
     /* padding: 30px; */
     /* align-items: center; */
     background-color: #ccc;
+    /* flex-wrap: wrap; */
 }
 .middle h1
 {
@@ -325,23 +331,29 @@ h1{
 
 .beingsorted
 {
-    /* padding: 30px;
-    margin-left: 40px; */
+    padding: 40px;
+    /* margin-left: 40px;  */
     display: flex;
     justify-content: space-around;
+    /* flex-wrap: wrap; */
 }
 .ss{
     /* padding: 30px; */
-    /* margin-bottom: 50px;
-    border-radius: 10px; */
+    /* margin-bottom: 50px; */
+    border-radius: 10px; 
     box-shadow: -20px 40px 0px 5px yellow;
-
+    width: 100%;
+}
+.ss img
+{
+    border-radius: 10px;
 }
 
 .bs{
     /* font-size: 50px; */
     /* padding: 30px; */
     margin: 30px;
+    /* flex-wrap: wrap; */
 } 
 .bs1
 {
@@ -350,16 +362,18 @@ h1{
     display: flex;
     justify-content: space-between;
     margin: 10px;
+    /* flex-wrap: wrap; */
 }
 .bs1 p{
     position: relative;
-    left: 110px;
+    left: 100px;
     font-size: 18px;
 }
 .ick{
     background-color: whitesmoke;
-    margin-right: 30px;
+    margin-right: 40px;
 }
+
 .bs1 i
 {
     margin: 10px 100px ;
@@ -370,25 +384,29 @@ h1{
 .icj
 {
     background-color: whitesmoke;
-    
+    margin-right: 40px;
 }
 
 .ick:hover
 {
     background-color: yellow;
     border: 2px solid;
-   
+    transition: all .3s;
+    scale: 1.1;
 }
 .icj:hover
 {
     background-color: yellow;
     border: 2px solid;
+    transition: all .3s;
+    scale: 1.1;
 }
 
 .prise
 {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .prise button
 {
@@ -440,17 +458,25 @@ h1{
 }
 .last
 {
-    background-color: yellow;
-    padding: 30px;
-    width: 1000px;
+    background-color: white;
+    padding: 100px;
+    padding-bottom: 0;
+    /* width: 100%; */
     align-items: center;
-    margin-left: 210px;
+    /* margin-left: 210px; */
     border-radius: 10px;
     box-shadow: 20px 20px 0px lightyellow;
 }
 .last form input
 {
     padding: 10px;
+    border-radius: 5px;
+}
+
+.last1
+{
+    padding: 30px;
+    background-color: yellow;
 }
 .footer
 {
@@ -477,14 +503,335 @@ h1{
 }
 
 footer h3{
-    /* font-size: 40px; */
+    font-size: 40px;
 }
 .foot2 i:hover
 {
-    scale: 1.1;
+    scale: 1.2;
     cursor: pointer;
 }
 .foot2
 {
     font-size: 20px;
 }
+
+
+
+
+
+/* course_information_css */
+
+.c_upper1 p
+{
+    font-size: 40px;
+    padding: 10px;
+}
+.c_upper1
+{
+    margin-top: 50px;
+}
+
+.c_upper1 b
+{
+    font-size: 40px;
+}
+.c_upper
+{
+    font-size: 20px;
+}
+
+.c_upper i
+{
+   color: yellowgreen;
+}
+
+.c_upper button
+{
+   margin-left: 60px;
+   padding: 20px;
+   /* width: 40px; */
+}
+
+.c_upper button:hover
+{
+    scale: 1.1;
+}
+.c_upper{
+    display: flex;
+    justify-content: space-around;
+    background-color: whitesmoke;
+    padding: 30px;
+    margin: 30px;
+}
+.c_upper2
+{
+    padding: 30px;
+}
+.c_upper2 img
+{
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.c_learn1 p
+{
+    font-size: 40px;
+    font-style: bold;
+    padding: 30px;
+    margin-left: 50px;
+}
+.c_learn1 li
+{
+    font-size: 20px;
+}
+
+.c_learn2
+{
+    font-size: 30px;
+    font-style: bold;
+    padding: 30px;
+    margin-left: 50px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    width: 300px;
+}
+.c_learn2 i
+{
+    background-color: white;
+    padding: 20px;
+    border-radius: 30px;
+}
+
+.c_learn2:hover
+{
+    background-color: yellow;
+}
+.c_learn3
+{
+    font-size: 30px;
+    font-style: bold;
+    padding: 30px;
+    margin-left: 50px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    width: 300px;
+}
+.c_learn3 i
+{
+    background-color: white;
+    padding: 20px;
+    border-radius: 30px;
+}
+.c_learn3:hover
+{
+    background-color: yellow;
+}
+
+.c_learn2 ul
+{
+    font-size: 20px;
+    list-style: square;
+}
+.c_learn3 ul
+{
+    font-size: 20px;
+    list-style: square;
+}
+.c_learn
+{
+    display: flex;
+    justify-content: space-around;
+    padding: 30px;
+}
+
+a
+{
+    color: #000;
+    font-style: none;
+    list-style: none;
+}
+
+
+
+
+
+
+/* form */
+.form
+{
+    /* align-items: center; */
+    font-size: 20px;
+    margin-left: 100px;
+    padding: 50px;
+    padding-left: 100px;
+    background-color: #444;
+    color: white;
+    border-radius: 5px;
+}
+.form_h1
+{
+    /* background-color: #444; */
+    background-color: #697565;
+}
+
+.form_h2
+{
+    color: white;
+}
+.card_type
+{
+    padding: 13px;
+    width: 520px;
+    border-radius: 5px;
+    margin-left: 30px;
+}
+
+.m1{
+   margin-left: 30px;
+    /* padding: 5px; */
+}
+
+#exp_date
+{
+    margin-left: 10px;
+}
+
+
+.Gender
+{
+    
+}
+
+#CVV
+{
+    margin-left: 60px;
+}
+
+
+#check{
+    display: none;
+}
+
+/* //reflex */
+#check:checked~.upper .courses{
+    display: block;
+}
+
+@media screen and (min-width: 200px) and (max-width:700px){
+    body{
+        overflow-x: hidden;
+    }
+    
+    #demo1
+    {
+       flex-direction: column;
+       font-size: small;
+    }
+    #demo1 img{
+        image-rendering: none;
+    }
+    .icons{
+        display: none;
+    }
+    .form
+    {
+         flex-direction: column-reverse;
+                
+    }
+    .courses
+    {
+        flex-direction: column;
+        display: none;
+    }
+    .form
+    {
+        width: 200px;
+    }
+    .form input
+    {
+        width: 200px;
+    }
+    .topup
+    {
+        flex-wrap: wrap;
+    }
+    .course-card
+    {
+        margin-top: 100px;
+        flex-wrap: wrap;
+    }
+    .card-body button
+    {
+        width: 300px;
+    }
+    .course-container
+    {
+        margin-top: 100px;
+        padding-left: 100px;
+    }
+    .ss img{
+        width: 500px;
+    }
+    .last
+    {
+        margin-left: 0;
+    }
+
+    .prise2
+    {
+        margin-top: 50px;
+    }
+    .prise3
+    {
+        margin-top: 50px;
+    }
+
+    .middle
+{
+    /* display: flex;
+    justify-content: space-around;
+    font-size: 30px;
+    /* padding: 30px; */
+    /* align-items: center; */
+    /* background-color: #ccc; */ 
+    flex-wrap: wrap;
+}
+}
+
+
+
+
+
+/* //success page */
+
+
+
+#success{
+    background-color: silver;
+}
+
+#success_1
+{
+    background-color: white;
+    /* align-items: center; */
+    /* margin-left: 300px; */
+   padding-top: 50px;
+   padding-bottom: 50px;
+    /* padding: 50px; */
+    border-radius: 10px;
+}
+
+#section
+{
+    background-color: silver;
+    padding: 100px;
+    /* width: 100% */
+    /* align-items: center; */
+}
+.done
+{
+    margin-left: 600px;
+}
+
+
